--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,10 @@
 		<maven.compiler.target>1.7</maven.compiler.target>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<sonar.projectKey>dodda</sonar.projectKey>
+		<sonar.projectKey>dod</sonar.projectKey>
 		<sonar.language>java</sonar.language>
 		<sonar.host.url>http://localhost:9000</sonar.host.url>
-		<sonar.login>sqp_278d2ed755672c49dc0defa1fd9ad994f14a0488</sonar.login>
+		<sonar.login>sqp_0d8c5186deadefef4d4a8da1bb6ffed838aa79ca</sonar.login>
 
 	</properties>
 
@@ -118,7 +118,7 @@
 				<plugin>
 					<groupId>org.sonarsource.scanner.maven</groupId>
 					<artifactId>sonar-maven-plugin</artifactId>
-					<version>3.6.1.59531</version>
+					<version>3.9.1.2184</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
