--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 		<maven.compiler.target>1.7</maven.compiler.target>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<sonar.projectKey>dod</sonar.projectKey>
+		<sonar.projectKey>dodda</sonar.projectKey>
 		<sonar.language>java</sonar.language>
 		<sonar.host.url>http://localhost:9000</sonar.host.url>
 		<sonar.login>sqp_0d8c5186deadefef4d4a8da1bb6ffed838aa79ca</sonar.login>
